[gd_scene load_steps=3 format=2]

[ext_resource path="res://nodes/room_elements/moving_platforms/controllers/platform_mover.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/room_elements/elevator_system.gd" type="Script" id=2]

[node name="elevator_system" instance=ExtResource( 1 )]

script = ExtResource( 2 )
one_way = true
in_back_ground = false
player_background_layer = null
player_background_mask = null
platform_background_layer = null
platform_background_mask = null

[node name="point_0_notifier" type="VisibilityNotifier2D" parent="point_0" index="0"]

rect = Rect2( -10, -10, 20, 20 )

[node name="point_1_notifier" type="VisibilityNotifier2D" parent="point_1" index="0"]

rect = Rect2( -10, -10, 20, 20 )
_sections_unfolded = [ "Transform" ]

[connection signal="arrived_at_next_point" from="." to="." method="_on_elevator_system_arrived_at_next_point"]

[connection signal="screen_entered" from="point_0/point_0_notifier" to="." method="_on_point_0_notifier_screen_entered"]

[connection signal="screen_entered" from="point_1/point_1_notifier" to="." method="_on_point_1_notifier_screen_entered"]


